[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GeneralUtilsByXY"
version = "0.1.1"
description = "小依的一些通用工具集"
authors = [{ name = "小依", email = "2877544374@qq.com" }]
dependencies = [
    "opencv-python-headless",
    "matplotlib",
    "pytest",
    "numpy==1.26.4",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "tqdm==4.67.1"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/NzothR/GeneralUtilsByXY"