[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GeneralUtilsByXY"
version = "0.1.2"
description = "小依的一些通用工具集"
authors = [{ name = "小依", email = "2877544374@qq.com" }]
dependencies = [
    "opencv-python-headless",
    "matplotlib",
    "pytest",
    "numpy",
    "torch",
    "tqdm"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/NzothR/GeneralUtilsByXY"